--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -12,33 +12,7 @@
 </div>
 
 <div class="messages">
-  <div class="message">
-    <div class="message-data">
-      <div class="message-user">
-        Tom
-      </div>
-      <div class="message-date">
-        <time>2020/3/31(Wed) 12:43:30</time>
-      </div>
-    </div>
-    <div class="main-message">
-        <p>おはよう</p>
-    </div>
-  </div>
-
-  <div class="message">
-    <div class="message-data">
-      <div class="message-user">
-        Sim
-      </div>
-      <div class="message-date">
-        <time>2020/3/31(Wed) 12:43:30</time>
-      </div>
-    </div>
-    <div class="main-message">
-        <p>こんにちは</p>
-    </div>
-  </div>
+  <%= render partial: 'message', collection: @messages %>
 </div>  
 
 
